2006-05-19 Kurt Maute <Kurt@Maute.us>
	* data/ui/gantt-view.ui
	* src/planner-gantt-background.c
	* src/planner-gantt-chart.c
	* src/planner-gantt-chart.h
	* src/planner-gantt-view.c

	Hint lines patch courtesy of Nguyễn Thái Ngọc Duy
	Shows horizontal lines on Gantt to help line up task tree with chart
	Closes Bug # 303374

2006-05-19 Kurt Maute <Kurt@Maute.us>
	* libplanner/mrp-task.c
	Fix typo impr_task_get_constraint when compiling with simple priority scheduling

2006-05-02 Kurt Maute <Kurt@Maute.us>
	* libplanner/mrp-file-module.c
	* libplanner/mrp-storage-module-factory.c
	* src/planner-cell-renderer-popup.c
	* src/planner-gantt-row.c
	* src/planner-plugin-loader.c
	* src/planner-resource-view.c
	* src/planner-window.c
	Fix for compiling with gcc 4.1 - type punned pointers that break strict aliasing rules

2006-04-29 Kurt Maute <Kurt@Maute.us>
	* src/planner-gantt-view.c
	* src/planner-usage-view.c
	Fix for bug 128983 - Gantt bar height doesn't match treeview row height
	Patch contributed by Francisco Moraes <fmoraes@nc.rr.com>

2006-04-23 Kurt Maute <Kurt@Maute.us>
	* src/planner-gantt-chart.c
	Fix for Bug 339284 - patch contributed by Mardy
	gantt_chart_reflow_do should return 0 if node is empty

2006-04-21 Kurt Maute <Kurt@Maute.us>
	* src/planner-task-tree.c
	Patch to fix bug 322570 - Crash when indenting tasks
	Patch contributed by Alejandro García Castro

2006-04-19 Kurt Maute <Kurt@Maute.us>

	* docs/libplanner/tmpl/mrp-relation.sgml
	* libplanner/mrp-private.h
	* libplanner/mrp-task-manager.c
	* libplanner/mrp-task.c
	* src/planner-task-dialog.c
	Add support for FF and SF relationships

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2006-04-11 Kurt Maute <Kurt@Maute.us>

	* src/planner-usage-chart.c
	Comment out 'View for Usage configured' message

2006-04-11 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-usage-row.c