@@ -14,7 +14,7 @@
       <placeholder name="View specific placeholder bottom">
         <menuitem    action="EditColumns"/>
         <menuitem    action="HighlightCriticalTasks"/>
-        <menuitem    action="ShowHintLines"/>
+        <menuitem    action="ShowGuideLines"/>
         <menuitem    action="NonstandardDays"/>
       </placeholder>
     </menu>
