@@ -85,7 +85,7 @@ static void          gantt_view_zoom_out_cb               (GtkAction         *ac
 							   gpointer           data);
 static void          gantt_view_highlight_critical_cb     (GtkAction         *action,
 							   gpointer           data);
-static void          gantt_view_show_hint_cb		  (GtkAction         *action,
+static void          gantt_view_show_guidelines_cb	  (GtkAction         *action,
 							   gpointer           data);
 static void          gantt_view_nonstandard_days_cb       (GtkAction         *action,
 							   gpointer           data);
@@ -184,9 +184,9 @@ static const GtkToggleActionEntry toggle_entries[] = {
 	{ "HighlightCriticalTasks", NULL, N_("_Highlight Critical Tasks"),
 	  NULL, NULL,
 	  G_CALLBACK (gantt_view_highlight_critical_cb), FALSE },
-	{ "ShowHintLines", NULL, N_("_Show hint lines"),
+	{ "ShowGuideLines", NULL, N_("_Show Guide Lines"),
 	  NULL, NULL, 
-	  G_CALLBACK (gantt_view_show_hint_cb), FALSE },
+	  G_CALLBACK (gantt_view_show_guidelines_cb), FALSE },
 	{ "NonstandardDays", NULL, N_("_Nonstandard Days"),
 	  NULL, NULL,
 	  G_CALLBACK (gantt_view_nonstandard_days_cb), FALSE }
@@ -1106,7 +1106,7 @@ gantt_view_update_ui (PlannerGanttView *view)
 }
 
 static void
-gantt_view_show_hint_cb (GtkAction *action,
+gantt_view_show_guidelines_cb (GtkAction *action,
 				  gpointer   data)
 {
 	PlannerGanttView     *view;
@@ -1118,7 +1118,7 @@ gantt_view_show_hint_cb (GtkAction *action,
 
 	state = gtk_toggle_action_get_active (GTK_TOGGLE_ACTION(action));
 
-	planner_gantt_chart_set_show_hint (
+	planner_gantt_chart_set_show_guidelines (
 		PLANNER_GANTT_CHART (priv->gantt),
  		state);
 }
