@@ -1,3 +1,12 @@
+2006-05-23 Kurt Maute <Kurt@Maute.us>
+	* data/ui/gantt-view.ui
+	* src/planner-gantt-background.c
+	* src/planner-gantt-chart.c
+	* src/planner-gantt-chart.h
+	* src/planner-gantt-view.c
+
+	Changed 'Hint' lines to 'Guide' Lines
+
 2006-05-19 Kurt Maute <Kurt@Maute.us>
 	* data/ui/gantt-view.ui
 	* src/planner-gantt-background.c
